# FLightcase

./: .gitignore  .gitmodules  LICENSE  README.md  cli.py  client-specific_training.py  client.py  compare_train_test.py  preprocess_images.py  preprocess_state_dict.py  pyproject.toml  requirements.txt  server.py  setup.py  test.py  train.py
DL_utils/: Glorot_initialisation_state_dict.py  data.py  evaluation.py  model.py  regression-based_z_norm.py
FLightcase/: __main__.py  client.py  server.py
FLightcase/simulation/: README.md  environment.yml  pre_process.py  prepare_data.sh
FLightcase/templates/: architecture.py  client_node_settings.json
FLightcase/utils/: communication.py  template_creation.py  tracking.py
FLightcase/utils/deep_learning/: data.py  evaluation.py  general.py  model.py  train.py
FLightcase/utils/toolbox_manuscript/: centralised_loss_figure.py  create_loss_figure.py  describe_data.py  preprocess_Wood_statedict.py  pretty_true_pred_test_scatterplot.py  training_centralised.py
binder/: README.md  environment.yml  postBuild
figures/: create_loss_figure.py  create_map.py
figures_tables/: ANOVA_from_intermediary.py  chi_squared.py  create_loss_figure.py  get_dataset_characteristics.py  test_results_figures.py
requirements/: requirements_deep_learning.txt  requirements_federated_learning.txt  requirements_preprocessing.txt
simulation/: README.md  environment.yml  preparation.sh  prepare_data.sh  preprocess_images.py
templates/: FL_plan.json  FL_settings_client.json  FL_settings_server.json  architecture.py  client_node_settings.json  server_node_settings.json
utils/: communication.py  results.py  template_creation.py  tracking.py
utils/deep_learning/: data.py  evaluation.py  model.py  train.py
utils/toolbox_manuscript/: create_loss_figure.py
