# Created from setup.py:
# 1. setup.py --> setup.cfg (using setuptools-py2cfg==2.1.0)
# 2. setup.cfg --> pyproject.toml (using ini2toml==0.15 and manually instaling toml==0.10.2)
# Note: to build from pyproject.toml, the "build" package is required (pip install build)


[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "FLightcase"
version = "0.1.5"
description = "FLightcase toolbox for Federated Learning"
readme = "README.md"
dependencies = [
    "torch==2.5.1",
    "pandas==2.2.3",
    "monai==1.4.0",
    "scikit-learn==1.6.0",
    "tqdm==4.67.1",
    "nibabel==5.3.2",
    "paramiko==3.5.0",
    "scp==0.15.0",
    "matplotlib==3.10.0",
    "scipy==1.14.1",
    "numpy==1.26.4",
    "click==8.1.8",
    "twine==6.0.1"  # To upload to PyPI
]

[[project.authors]]
name = "Stijn Denissen"
email = "stijn.denissen@vub.be"

[project.license]
text = "CC BY-NC-ND 4.0"

[project.urls]
Homepage = "https://github.com/AIMS-VUB/FLightcase/"

[project.scripts]
FLightcase = "FLightcase.__main__:cli"

# Source for optimal package structure and contents of pyproject.toml:
# - https://stackoverflow.com/questions/50585246/pip-install-creates-only-the-dist-info-not-the-package
# - https://medium.com/@kavyamalla/build-and-install-python-package-with-multiple-directories-referencing-one-another-f27cdfe667e2
# - https://stackoverflow.com/questions/75387904/how-to-exclude-tests-folder-from-the-wheel-of-a-pyproject-toml-managed-lib
# - https://github.com/pauldmccarthy/fsleyes/blob/main/pyproject.toml

[tool.setuptools.packages.find]
include = ['FLightcase*']
exclude = ['FLightcase.simulation*']

# https://stackoverflow.com/questions/76886313/how-to-include-json-files-in-a-python-package-using-a-pyproject-toml
# https://stackoverflow.com/questions/76485082/package-and-find-non-python-files-in-a-python-package
[tool.setuptools.package-data]
'*' = ['*.*']  # To include other files than .py files


####################################################################
# PyPI distribution:
# Video: https://www.youtube.com/watch?app=desktop&v=Kz6IlDCyOUY&t=430s
# https://stackoverflow.com/questions/58753970/how-to-build-a-source-distribution-without-using-setup-py-file

# CAVE: Make sure not to distribute submodule contents when updating PyPI version
